[gd_scene load_steps=88 format=3 uid="uid://b04mlgqr6ym37"]

[ext_resource type="Script" uid="uid://db7tnmqttgb5r" path="res://scripts/personajes/Tobio.gd" id="1_d1of5"]
[ext_resource type="Texture2D" uid="uid://cny13xt6tynbx" path="res://assets/sprites/tobio/1_Tobio_Idle.png" id="1_l8fqe"]
[ext_resource type="PackedScene" uid="uid://jxi8dy1vmhjq" path="res://scenes/objetos/Proyectil.tscn" id="2_70atu"]
[ext_resource type="Texture2D" uid="uid://cu5v2betsljaq" path="res://assets/sprites/tobio/4_Tobio_Fall.png" id="2_oskxx"]
[ext_resource type="Texture2D" uid="uid://b4e01kburxvvy" path="res://assets/sprites/tobio/15_Tobio_Attack.png" id="3_j24hj"]
[ext_resource type="Texture2D" uid="uid://cy6jmg3u4d156" path="res://assets/sprites/tobio/3_Tobio_Jump.png" id="4_4l2ex"]
[ext_resource type="Texture2D" uid="uid://d2fwcoj6cuc8g" path="res://assets/sprites/tobio/21_Tobio_Ranged_Attack.png" id="5_4l2ex"]
[ext_resource type="Texture2D" uid="uid://oo12d6upb1aj" path="res://assets/sprites/tobio/2_Tobio_Run.png" id="5_hoarg"]
[ext_resource type="Texture2D" uid="uid://bpt63vo4e825r" path="res://assets/sprites/tobio/18_Tobio_Death.png" id="6_eadod"]
[ext_resource type="Texture2D" uid="uid://bc0rvf4sgsmpt" path="res://assets/sprites/tobio/22_Tobio_Jump_Ranged_Attack.png" id="6_gxhmi"]
[ext_resource type="Texture2D" uid="uid://cdxnakrutac8m" path="res://assets/sprites/tobio/16_Tobio_Jump_Attack.png" id="8_70atu"]
[ext_resource type="Texture2D" uid="uid://bovq8i0f26fv4" path="res://assets/sprites/tobio/26_Tobio_Special_Attack.png" id="16_1od8n"]
[ext_resource type="Texture2D" uid="uid://5k44vwtuywgf" path="res://assets/sprites/tobio/17_Tobio_Take_Damage.png" id="17_1od8n"]

[sub_resource type="AtlasTexture" id="AtlasTexture_xd73u"]
atlas = ExtResource("3_j24hj")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bogta"]
atlas = ExtResource("3_j24hj")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8hkek"]
atlas = ExtResource("3_j24hj")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nj6tt"]
atlas = ExtResource("3_j24hj")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kise0"]
atlas = ExtResource("3_j24hj")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1ufw"]
atlas = ExtResource("3_j24hj")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wmoil"]
atlas = ExtResource("6_eadod")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lgnmn"]
atlas = ExtResource("6_eadod")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rpbsf"]
atlas = ExtResource("6_eadod")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uwqeo"]
atlas = ExtResource("6_eadod")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujsbh"]
atlas = ExtResource("6_eadod")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdqf8"]
atlas = ExtResource("6_eadod")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7k5ro"]
atlas = ExtResource("6_eadod")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wcy55"]
atlas = ExtResource("6_eadod")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t7b4w"]
atlas = ExtResource("6_eadod")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jngty"]
atlas = ExtResource("2_oskxx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j24hj"]
atlas = ExtResource("2_oskxx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7vlkb"]
atlas = ExtResource("2_oskxx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_70atu"]
atlas = ExtResource("2_oskxx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d1of5"]
atlas = ExtResource("1_l8fqe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oofl8"]
atlas = ExtResource("1_l8fqe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_svjcc"]
atlas = ExtResource("1_l8fqe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oskxx"]
atlas = ExtResource("1_l8fqe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4l2ex"]
atlas = ExtResource("1_l8fqe")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hoarg"]
atlas = ExtResource("1_l8fqe")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gxhmi"]
atlas = ExtResource("1_l8fqe")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vnr7y"]
atlas = ExtResource("1_l8fqe")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g1rf8"]
atlas = ExtResource("4_4l2ex")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6fbh"]
atlas = ExtResource("4_4l2ex")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ydn02"]
atlas = ExtResource("4_4l2ex")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eadod"]
atlas = ExtResource("4_4l2ex")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjkif"]
atlas = ExtResource("8_70atu")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w0b4v"]
atlas = ExtResource("8_70atu")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hxvea"]
atlas = ExtResource("8_70atu")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xpnys"]
atlas = ExtResource("8_70atu")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u67qs"]
atlas = ExtResource("8_70atu")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdetf"]
atlas = ExtResource("8_70atu")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aud5o"]
atlas = ExtResource("6_gxhmi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_eust3"]
atlas = ExtResource("6_gxhmi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ouu3r"]
atlas = ExtResource("6_gxhmi")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_60u2p"]
atlas = ExtResource("6_gxhmi")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvylf"]
atlas = ExtResource("6_gxhmi")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_y43yo"]
atlas = ExtResource("6_gxhmi")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_phvtv"]
atlas = ExtResource("5_4l2ex")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nueiv"]
atlas = ExtResource("5_4l2ex")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j0ecx"]
atlas = ExtResource("5_4l2ex")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfpoq"]
atlas = ExtResource("5_4l2ex")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kve1"]
atlas = ExtResource("5_4l2ex")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpexa"]
atlas = ExtResource("5_4l2ex")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1od8n"]
atlas = ExtResource("5_hoarg")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1xkf"]
atlas = ExtResource("5_hoarg")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ph744"]
atlas = ExtResource("5_hoarg")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdhmr"]
atlas = ExtResource("5_hoarg")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l0nak"]
atlas = ExtResource("5_hoarg")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uparv"]
atlas = ExtResource("5_hoarg")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sh41v"]
atlas = ExtResource("5_hoarg")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qyk3o"]
atlas = ExtResource("5_hoarg")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_awiai"]
atlas = ExtResource("5_hoarg")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sirin"]
atlas = ExtResource("5_hoarg")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r41x5"]
atlas = ExtResource("16_1od8n")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyor2"]
atlas = ExtResource("16_1od8n")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3lq7"]
atlas = ExtResource("16_1od8n")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hwo2d"]
atlas = ExtResource("16_1od8n")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jfq4o"]
atlas = ExtResource("16_1od8n")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_btdbf"]
atlas = ExtResource("16_1od8n")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7u27u"]
atlas = ExtResource("16_1od8n")
region = Rect2(384, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_odaf6"]
atlas = ExtResource("16_1od8n")
region = Rect2(448, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jd7u5"]
atlas = ExtResource("17_1od8n")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3vmdx"]
atlas = ExtResource("17_1od8n")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xw6eo"]
atlas = ExtResource("17_1od8n")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5762"]
atlas = ExtResource("17_1od8n")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_jngty"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xd73u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bogta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8hkek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nj6tt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kise0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1ufw")
}],
"loop": true,
"name": &"attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wmoil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lgnmn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rpbsf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwqeo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujsbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdqf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7k5ro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wcy55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t7b4w")
}],
"loop": true,
"name": &"death",
"speed": 7.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jngty")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j24hj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7vlkb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70atu")
}],
"loop": true,
"name": &"fall",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d1of5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oofl8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svjcc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oskxx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4l2ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hoarg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gxhmi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vnr7y")
}],
"loop": true,
"name": &"idle",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_g1rf8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6fbh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ydn02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eadod")
}],
"loop": true,
"name": &"jump",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjkif")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w0b4v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hxvea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xpnys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u67qs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdetf")
}],
"loop": true,
"name": &"jump_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aud5o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eust3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ouu3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_60u2p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvylf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y43yo")
}],
"loop": true,
"name": &"jump_ranged_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_phvtv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nueiv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j0ecx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfpoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kve1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpexa")
}],
"loop": true,
"name": &"ranged_attack",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1od8n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1xkf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ph744")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdhmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l0nak")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uparv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sh41v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qyk3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awiai")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sirin")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r41x5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyor2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3lq7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hwo2d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jfq4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_btdbf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7u27u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_odaf6")
}],
"loop": true,
"name": &"special_attack",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jd7u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3vmdx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xw6eo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5762")
}],
"loop": true,
"name": &"take_damage",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l8fqe"]
size = Vector2(97, 102)

[sub_resource type="CircleShape2D" id="CircleShape2D_70atu"]

[node name="Tobio" type="CharacterBody2D"]
script = ExtResource("1_d1of5")
projectile_scene = ExtResource("2_70atu")
_velocidad_base = 480.0
_fuerza_salto_base = 460.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -60)
scale = Vector2(5, 5)
sprite_frames = SubResource("SpriteFrames_jngty")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, -51)
shape = SubResource("RectangleShape2D_l8fqe")

[node name="AttackArea" type="Area2D" parent="."]
position = Vector2(55, -34)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
visible = false
shape = SubResource("CircleShape2D_70atu")

[node name="ProyectilSpawn" type="Node2D" parent="."]
position = Vector2(54, -48)

[connection signal="frame_changed" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_frame_changed"]
